package edu.uees.disenosoftware.builder;

public enum Modalidad {
    PRESENCIAL,
    VIRTUAL
}
