@startuml
title Builder - Construccion de Reserva

enum Modalidad {
    PRESENCIAL
    VIRTUAL
}

enum Prioridad {
    BAJA
    MEDIA
    ALTA
}

class Reserva {
    - estudiante: String
    - docente: String
    - fechaHora: LocalDateTime
    - modalidad: Modalidad
    - motivo: String
    - observacion: String
    - prioridad: Prioridad
    - recordatorio: boolean
    - enlace: String
    - duracionMinutos: int
    - idiomaNotificacion: String
    - requiereGrabacion: boolean
}

class ReservaBuilder {
    - estudiante: String
    - docente: String
    - fechaHora: LocalDateTime
    - modalidad: Modalidad
    - motivo: String = "Sin motivo especificado"
    - observacion: String = ""
    - prioridad: Prioridad = MEDIA
    - recordatorio: boolean = false
    - enlace: String = ""
    - duracionMinutos: int = 30
    - idiomaNotificacion: String = "Español"
    - requiereGrabacion: boolean = false

    + estudiante(valor: String): ReservaBuilder
    + docente(valor: String): ReservaBuilder
    + fechaHora(valor: LocalDateTime): ReservaBuilder
    + modalidad(valor: Modalidad): ReservaBuilder
    + motivo(valor: String): ReservaBuilder
    + observacion(valor: String): ReservaBuilder
    + prioridad(valor: Prioridad): ReservaBuilder
    + recordatorio(valor: boolean): ReservaBuilder
    + enlace(valor: String): ReservaBuilder
    + duracionMinutos(valor: int): ReservaBuilder
    + idiomaNotificacion(valor: String): ReservaBuilder
    + requiereGrabacion(valor: boolean): ReservaBuilder
    + build(): Reserva
}

class App {
    + main(args: String[]): void
}

ReservaBuilder ..> Reserva : construye
Reserva --> Modalidad
Reserva --> Prioridad
App ..> ReservaBuilder : utiliza

note right of ReservaBuilder
Atributos obligatorios:
estudiante
docente
fechaHora
modalidad

Atributos opcionales:
los demas campos

build() valida antes de crear Reserva.
end note

@enduml
